; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_obs_data_item_set_autoselect_frames_per_second.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_obs_data_item_set_autoselect_frames_per_second.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.media_frames_per_second = type { i32 }

@set_item_auto = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_data_item_set_autoselect_frames_per_second(i32** %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.media_frames_per_second, align 4
  %5 = alloca i32**, align 8
  %6 = alloca i8*, align 8
  %7 = getelementptr inbounds %struct.media_frames_per_second, %struct.media_frames_per_second* %4, i32 0, i32 0
  store i32 %1, i32* %7, align 4
  store i32** %0, i32*** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i32**, i32*** %5, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = getelementptr inbounds %struct.media_frames_per_second, %struct.media_frames_per_second* %4, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @make_frames_per_second(i32 %11, i8* %9)
  %13 = load i32, i32* @set_item_auto, align 4
  %14 = call i32 @obs_take_obj(i32* null, i32** %8, i32* null, i32 %12, i32 %13)
  ret void
}

declare dso_local i32 @obs_take_obj(i32*, i32**, i32*, i32, i32) #1

declare dso_local i32 @make_frames_per_second(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
